--- a/web_config.ini
+++ b/web_config.ini
@@ -7,6 +7,7 @@ Module = user
 WorkerId = 0
 JwtSecret = 23347$040412
 JwtIssuer = sean.tech/webservice
+JwtExpiresTime = 36
 RuntimeRootPath = /Users/Lyra/Desktop/Go/
 
 [log]
