add rate limit for service

--- a/web_config.ini
+++ b/web_config.ini
@@ -28,6 +28,8 @@ ApiPort = 8811
 ServicePort = 8812
 ReadTimeout = 60
 WriteTimeout = 60
+RateLimitFillInterval = 500
+RateLimitCapacity = 500
 
 [database]
 Type = mysql
