--- a/web_config.ini
+++ b/web_config.ini
@@ -24,12 +24,11 @@ FileMaxSize = 10
 FileAllowExts = .jpg,.jpeg,.png
 
 [server]
-ApiPort = 8811
-ServicePort = 8812
+HttpPort = 8811
+RpcPort = 8812
 ReadTimeout = 60
 WriteTimeout = 60
-RateLimitFillInterval = 500
-RateLimitCapacity = 500
+RpcPerSecondConnIdle = 500
 
 [database]
 Type = mysql
