add encrypt and secret middleware for gin, config rebuild to switch local and etcd

--- a/web_config.ini
+++ b/web_config.ini
@@ -1,20 +1,36 @@
-[app]
+[global]
 #debug or release
 RunMode = debug
+JwtSecret = 23347$040412
+JwtIssuer = sean.tech/webservice
+JwtExpiresTime = 36
+RsaServerPubKey = /Users/lyra/Desktop/Doc/安全方案/businessS/spubkey.pem
+RsaServerPriKey = /Users/lyra/Desktop/Doc/安全方案/businessS/sprivkey.pem
+RsaClientPubKey = /Users/lyra/Desktop/Doc/安全方案/businessC/cpubkey.pem
+RedisHost = 127.0.0.1:6379
+RedisPassword =
+RedisMaxIdle = 30
+RedisMaxActive = 30
+RedisIdleTimeout = 200
+# etcd 配置中心基础路径
+EtcdConfigPath = /sean.tech/webservice/config
+# etcd rpc服务基础路径
+EtcdRpcBasePath = /sean.tech/webservice/rpcservice
+EtcdEndPoints = localhost:2379,localhost:32379,localhost:42379
+KafkaAddress = localhost:9092,localhost:9093,localhost:9094
+
+[app]
 #模块名称，上线后不可更改
 Module = user
 #WorkerId，分布式服务机器实例Id，上线后不可更改
 WorkerId = 0
-JwtSecret = 23347$040412
-JwtIssuer = sean.tech/webservice
-JwtExpiresTime = 36
+#运行时基础路径，静态文件夹，日志文件夹的父路径
 RuntimeRootPath = /Users/Lyra/Desktop/Go/
 
 [log]
 LogSavePath = log/webservice/
 LogSaveName = user
 LogFileExt = log
-TimeFormat = 20060101
 
 [upload]
 FilePrefixUrl = http://127.0.0.1:8001
@@ -47,14 +63,3 @@ Password =
 MaxIdle = 30
 MaxActive = 30
 IdleTimeout = 200
-
-[etcd]
-# etcd配置中心 路径标识
-KeyPrefix = /sean.tech/config
-# rpc 路径标识
-BasePath = /sean.tech/webservice
-# 地址，分割符号：', '
-EndPointStr = localhost:2379
-
-[kafka]
-AddressStr = localhost:9092, localhost:9093, localhost:9094
