--- a/web_config.ini
+++ b/web_config.ini
@@ -26,18 +26,19 @@ Module = user
 WorkerId = 0
 #运行时基础路径，静态文件夹，日志文件夹的父路径
 RuntimeRootPath = /Users/Lyra/Desktop/Go/
-
-[log]
+#日志存储路径（文件夹，相对路径）
 LogSavePath = log/webservice/
-LogSaveName = user
-LogFileExt = log
-
-[upload]
-FilePrefixUrl = http://127.0.0.1:8001
-FileSavePath = uploadfiles/
-# MB
-FileMaxSize = 10
-FileAllowExts = .jpg,.jpeg,.png
+;[log]
+;LogSavePath = log/webservice/
+;LogSaveName = user
+;LogFileExt = log
+;
+;[upload]
+;FilePrefixUrl = http://127.0.0.1:8001
+;FileSavePath = uploadfiles/
+;# MB
+;FileMaxSize = 10
+;FileAllowExts = .jpg,.jpeg,.png
 
 [server]
 HttpPort = 8811
