--- a/web_config.ini
+++ b/web_config.ini
@@ -1,12 +1,15 @@
 [global]
-#debug or release
+# debug or release
 RunMode = debug
+# jwt
 JwtSecret = 23347$040412
 JwtIssuer = sean.tech/webservice
 JwtExpiresTime = 36
-RsaServerPubKey = /Users/lyra/Desktop/Doc/安全方案/businessS/spubkey.pem
-RsaServerPriKey = /Users/lyra/Desktop/Doc/安全方案/businessS/sprivkey.pem
-RsaClientPubKey = /Users/lyra/Desktop/Doc/安全方案/businessC/cpubkey.pem
+# rsa key path
+RsaServerPubKey = /Users/lyra/Desktop/Go/secret/spubkey.pem
+RsaServerPriKey = /Users/lyra/Desktop/Go/secret/sprivkey.pem
+RsaClientPubKey = /Users/lyra/Desktop/Go/secret/cpubkey.pem
+# redis shared
 RedisHost = 127.0.0.1:6379
 RedisPassword =
 RedisMaxIdle = 30
@@ -20,25 +23,17 @@ EtcdEndPoints = localhost:2379,localhost:32379,localhost:42379
 KafkaAddress = localhost:9092,localhost:9093,localhost:9094
 
 [app]
-#模块名称，上线后不可更改
+# 模块名称，上线后不可更改
 Module = user
-#WorkerId，分布式服务机器实例Id，上线后不可更改
+# WorkerId，分布式服务机器实例Id，上线后不可更改
 WorkerId = 0
-#运行时基础路径，静态文件夹，日志文件夹的父路径
+# 运行时基础路径，所有文件path的父路径
 RuntimeRootPath = /Users/Lyra/Desktop/Go/
-#日志存储路径（文件夹，相对路径）
+# 日志存储路径
 LogSavePath = log/webservice/
-;[log]
-;LogSavePath = log/webservice/
-;LogSaveName = user
-;LogFileExt = log
-;
-;[upload]
-;FilePrefixUrl = http://127.0.0.1:8001
-;FileSavePath = uploadfiles/
-;# MB
-;FileMaxSize = 10
-;FileAllowExts = .jpg,.jpeg,.png
+# TLS文件读取路径
+TLSCerPath = secret/certificate.pem
+TLSKeyPath = secret/key.pem
 
 [server]
 HttpPort = 8811
