module changed to serviceName

--- a/web_config.ini
+++ b/web_config.ini
@@ -23,8 +23,8 @@ EtcdEndPoints = localhost:2379,localhost:32379,localhost:42379
 KafkaAddress = localhost:9092,localhost:9093,localhost:9094
 
 [app]
-# 模块名称，上线后不可更改
-Module = user
+# 服务（模块）名称，上线后不可更改
+ServiceName = user
 # WorkerId，分布式服务机器实例Id，上线后不可更改
 WorkerId = 0
 # 运行时基础路径，所有文件path的父路径
